# pkg/httpserver/handlers/pastes/getPaste.go
@@ -24,8 +24,8 @@ import (
 // @Param input body models.RequestGetPaste false "paste info"
 // @Success 200 {object} models.ResponseGetPaste
 // @Failure 400,403,404,500 {object} response.errorResponse
-// @Router /api/paste [get]
-// @Router /api/paste [post]
+// @Router /paste/:alias [get]
+// @Router /paste/:alias [post]
 func GetPaste(log *slog.Logger, db *database.Database, blob *blob.BlobStorage) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var reqbody models.RequestGetPaste
